2016-03-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* texi2any-2-C.pl: Remove file.

2016-03-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* parser.c (process_remaining_on_line): Handle nested @macro.

2016-03-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* Makefile.am: Disable standalone parsetexi program, as building it
	doesn't work.
	* command_data.awk: Fix command data for commands given by 
	backslash escapes.

2016-03-27  Gavin Smith  <gavinsmith0123@gmail.com>

	Replace MakeMaker build system with automake/libtool one, copied 
	from XSParagraph.
	* Parsetexi: Remove subdirectory.
	* Parsetexi/Parsetexi.xs,
	* Parsetexi/lib/Parsetexi.pm: Move to top level.

2015-12-05  Gavin Smith  <gavinsmith0123@gmail.com>

	* commands.h (CF_global, CF_global_unique): New flags.

2015-12-05  Gavin Smith  <gavinsmith0123@gmail.com>

	* errors.c (command_warnf, command_errorf): Implement.

2015-12-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* separator.c (remove_empty_content_arguments): Implement.

2015-12-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* api.c (parse_text): Use new function input_push_text_with_line_nos
	to keep track of line numbers (for tests).

2015-11-30  Gavin Smith  <gavinsmith0123@gmail.com>
 
	* Parsetexi/lib/Parsetexi.pm (parser): Set conf keys on parser 
	object.

2015-11-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* Parsetexi/lib/Parsetexi.pm (parse_texi_text): Add function.

2015-11-29  Gavin Smith  <gavinsmith0123@gmail.com>

	Update so works again.

	* texi2any-C.pl, texi2any-C-2.pl: Replaced, to match most
	recent revision.
	* Parsetexi/lib/Parsetexi.pm: Set 'level' value from value in 
	'extra'.
	* Match changes made in the main code on 2015-10-02 to make 
	@heading affected by @lowersections.

2015-06-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* parser.c (process_remaining_on_line) <@value> Add element to 
	tree for unexpanded value.
	* api.c (element_to_perl_hash): Output 'type' as name for 
	unexpanded @value.
